k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingboard-ingress
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  
  rules:
    - http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: frontend-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service: 
                name: backend-service
                port: 
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service: 
                name: backend-service
                port:
                  number: 8080
